Fix number field on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,14 @@ textarea::placeholder {
 /* hide arrows for Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* hide arrows for Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
+    appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 .colorTeal {
